# Rusty

./: Cargo.toml  README.md  run.sh
src/: main copy.rs  main.rs
